Update favicon and change background color in manifest for improved consistency

--- a/app/[locale]/manifest.json
+++ b/app/[locale]/manifest.json
@@ -16,6 +16,6 @@
     }
   ],
   "theme_color": "#ffffff",
-  "background_color": "#2f6cf4",
+  "background_color": "#ffffff",
   "display": "standalone"
 }
