--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,5 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# declarations of messages
-messages/*.d.json.ts
-
+# TS declarations of messages
+/i18n/messages/*.d.json.ts
